
	* bin/cygport.in (cygconf): Properly detect autoconf-2.6x configure.

	* lib/gtkmm.cygclass (gtkmm_compile): Pass -no-undefined to LDFLAGS.

	* lib/perl.cygclass (perl_compile): Change Makefile.PL argument order.

	* lib/kde3.cygclass: Support kdevelop-3.5.0.
	(kde3_compile): Remove berkeley-db from default configure arguments.
	(kde3_install): Sanity check.

	* lib/gstreamer.cygclass: Fix aliases.

	* lib/pygtk.cygclass: Allow monolithic builds of gnome-python et al.
	(PYGTK_INCLUDEDIR, PYGTK_LIBDIR, PYGTK_DATADIR): Define.

	* lib/ruby-gnome2.cygclass: Add support for SVN checkouts.
	(src_compile): Speed up compile by lndir'ing only the relevant subdir.

	* bin/cygport.in (__list_deps): Really ignore Windows libraries.

	* lib/pygtk.cygclass: Add support for gtksourceview2.

	* lib/wxwidgets.cygclass (_find_wx_config):
	Fix 2.8 detection.
	Cygwin does not have support for Unicode builds, so error out.

	* lib/gst-plugins0.8.cygclass: Fixed spc, arts, and cdparanoia plugins.

	* lib/kde3.cygclass (kde3_compile): Standardize configure arguments.
	(kde3_install): Modulize libkdeinit libs, as their implibs aren't used.

	* lib/php.cygclass (php_postinst):
	Move php.ini generation into separate function.

	* bin/cygport.in (__list_deps): Ignore most Windows libraries.
	Include ${D}-prefixed equivalents in DEPS_PATH as well.

	* lib/apache.cygclass: Accomodate usage for libapreq2.
	(apache_apxs_compile, apxs_compile): New wrapper for 'apxs -c'.
	(doapachemod): Smarter detection of module extension.
	Do not override src_compile and src_install.

	* bin/make_desktop_entry: Application is not a valid Category.

	* Relicensed under GPL-3.

	* lib/pygtk.cygclass: Add gtop2 from gnome-python-desktop.

	* CYGWIN-PATCHES/README:
	* configure.ac:
	Post-release version bump.

*** 0.3.6 ***

	* bin/cygport.in (cygautoreconf): Sanity check.
	(__prep_libtool_modules): Break off from __prepstrip.
	(__pkg_diff): Ignore config.rpath if not building gettext.
